// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SegmentsPage No data view should be rendered 1`] = `
<div>
  <main
    class="layout"
  >
    <div
      class="Layout--horizontal StyledProps--main PageHeader--container PageHeader--standard header StyledProps--flex StyledProps--padding-left-xlarge StyledProps--padding-right-xlarge StyledProps--background-white"
    >
      <div
        class="Layout--vertical StyledProps--main"
      >
        <div
          class="PageHeader--breadcrumbsDiv"
        >
          <div
            class="Layout--horizontal StyledProps--main Breadcrumbs--breadcrumbs StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
          >
            <div
              class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
            >
              <a
                class="Breadcrumbs--breadcrumb"
                href="/account/dummy/cf/orgs/dummy/projects/dummy"
              >
                <span
                  class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall"
                  data-icon="cf-main"
                >
                  <svg
                    height="16"
                    viewBox="0 0 32 32"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M10.632 2.07971c-2.82243-.49768-5.51395 1.38693-6.01163 4.20941L2.07971 20.698c-.49768 2.8224 1.38693 5.514 4.20941 6.0116l7.46438 1.3162c.1679.0296.2935-.151.2072-.2981L6.88248 15.6562c-.29658-.4692-.29241-1.3825.05036-1.6001.07852-.0505.31177-.259.31177-.259l.39862-.4359.06546-.0718c.36979-.4065.70389-.7738 1.75973-1.3023l.22718-.0791c1.5487-.4838 2.4098-.4488 3.2711-.4139.8615.035 1.7232.07 3.2734-.4142 1.2722-.3974 2.4293-1.17776 3.0743-1.66713.2862-.21723.7089-.15379.8993.15103l4.5967 7.3608c.143.229.1072.525-.1017.696-.4965.4061-1.5001 1.122-2.8336 1.5385-1.5487.4837-2.4322.4627-3.3158.4417-.8839-.021-1.768-.042-3.3182.4422-1.3142.4105-1.868.9475-2.0695 1.2038-.0485.0616-.0703.2104-.0324.279.3995.7242 2.2948 4.0598 3.7934 6.6936.1472.2588.4018.4378.695.4895l3.0704.5414c2.8224.4977 5.514-1.3869 6.0116-4.2094l2.5407-14.4089c.4977-2.82243-1.3869-5.51395-4.2094-6.01163L10.632 2.07971Z"
                      fill="url(#a)"
                    />
                    <path
                      d="M16.6465 13.0743c-1.3034.3401-2.0932.3153-2.8829.2906-.7894-.0248-1.5787-.0496-2.8808.2902-.7439.2156-1.1778.592-1.58721 1.072-.05524.0648-.06157.1578-.01723.2305l2.48154 4.0684c.0644.1056.209.1297.3076.055.3732-.2826 1.2802-.9008 2.4193-1.198 1.4688-.3833 2.348-.3747 3.2737-.3657.7169.0069 1.4619.0142 2.5302-.1601.7166-.1169 1.3017-.4284 1.6278-.6356.1658-.1054.2014-.3225.0948-.4875L19.4717 12.3c-.1188-.184-.3687-.2355-.5593-.1276-.4181.2366-1.2035.6248-2.2659.9019Z"
                      fill="url(#b)"
                    />
                    <defs>
                      <lineargradient
                        gradientUnits="userSpaceOnUse"
                        id="a"
                        x1="6.83717"
                        x2="23.7805"
                        y1="2"
                        y2="28.2273"
                      >
                        <stop
                          stop-color="#FFC100"
                        />
                        <stop
                          offset="1"
                          stop-color="#E66B35"
                        />
                      </lineargradient>
                      <lineargradient
                        gradientUnits="userSpaceOnUse"
                        id="b"
                        x1="6.83717"
                        x2="23.7805"
                        y1="2"
                        y2="28.2273"
                      >
                        <stop
                          stop-color="#FFC100"
                        />
                        <stop
                          offset="1"
                          stop-color="#E66B35"
                        />
                      </lineargradient>
                    </defs>
                  </svg>
                </span>
                <p
                  class="StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--font-size-small"
                >
                  dummy
                </p>
              </a>
              <span
                class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey500 StyledProps--padding-right-xsmall StyledProps--padding-left-xsmall"
                data-icon="main-chevron-right"
              >
                <svg
                  enable-background="new 0 0 8 14"
                  height="8"
                  viewBox="0 0 8 14"
                  width="8"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m7.7 6.3-6-6c-.2-.2-.4-.3-.7-.3-.6 0-1 .4-1 1 0 .3.1.5.3.7l5.3 5.3-5.3 5.3c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3l6-6c.2-.2.3-.4.3-.7s-.1-.5-.3-.7z"
                    fill="#4d5969"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
        <h2
          class="StyledProps--font StyledProps--font-h2 StyledProps--main StyledProps--color StyledProps--color-grey800 StyledProps--font-weight-bold"
          level="2"
        >
          cf.shared.targetManagement: cf.shared.segments
        </h2>
      </div>
      <ul
        class="wrapper"
        data-testid="CFSectionToggle"
      >
        <li
          class="item"
        >
          <a
            class="link"
            href="/account/dummy/cf/orgs/dummy/projects/dummy/target-management/targets?activeEnvironment=undefined"
          >
            <span
              class="align"
              data-tooltip-id="ff_targets_heading"
            >
              cf.shared.targets
            </span>
          </a>
        </li>
        <li
          class="item"
        >
          <a
            class="link"
            href="/account/dummy/cf/orgs/dummy/projects/dummy/target-management/target-groups?activeEnvironment=undefined"
          >
            <span
              class="align"
              data-tooltip-id="ff_segments_heading"
            >
              cf.shared.segments
            </span>
          </a>
        </li>
      </ul>
      <div
        data-testid="CFTargetManagementHeaderSpacer"
        style="width: 325px;"
      />
    </div>
    
    <div
      class="content"
    >
      <div
        class="StyledProps--font StyledProps--main StyledProps--flex StyledProps--flex-align-center-center"
        style="width: 100%; height: 100%;"
      >
        <div
          class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
          style="align-items: center; margin-top: -48px; width: 470px;"
        >
          <img
            height="220"
            src="test-file-stub"
            width="220"
          />
          <h2
            class="StyledProps--font StyledProps--font-h2 StyledProps--main"
            level="2"
            style="font-weight: 600; font-size: 20px; line-height: 28px; color: rgb(137, 137, 143); text-align: center; padding: 30px 0px;"
          >
            cf.segments.noSegment
          </h2>
          <button
            class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
            type="button"
          >
            <span
              class="bp3-button-text"
            >
              cf.segments.create
            </span>
          </button>
        </div>
      </div>
    </div>
  </main>
</div>
`;

exports[`SegmentsPage No environment view should be rendered 1`] = `
<div>
  <main
    class="layout"
  >
    <div
      class="Layout--horizontal StyledProps--main PageHeader--container PageHeader--standard header StyledProps--flex StyledProps--padding-left-xlarge StyledProps--padding-right-xlarge StyledProps--background-white"
    >
      <div
        class="Layout--vertical StyledProps--main"
      >
        <div
          class="PageHeader--breadcrumbsDiv"
        >
          <div
            class="Layout--horizontal StyledProps--main Breadcrumbs--breadcrumbs StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
          >
            <div
              class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
            >
              <a
                class="Breadcrumbs--breadcrumb"
                href="/account/dummy/cf/orgs/dummy/projects/dummy"
              >
                <span
                  class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall"
                  data-icon="cf-main"
                >
                  <svg
                    height="16"
                    viewBox="0 0 32 32"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M10.632 2.07971c-2.82243-.49768-5.51395 1.38693-6.01163 4.20941L2.07971 20.698c-.49768 2.8224 1.38693 5.514 4.20941 6.0116l7.46438 1.3162c.1679.0296.2935-.151.2072-.2981L6.88248 15.6562c-.29658-.4692-.29241-1.3825.05036-1.6001.07852-.0505.31177-.259.31177-.259l.39862-.4359.06546-.0718c.36979-.4065.70389-.7738 1.75973-1.3023l.22718-.0791c1.5487-.4838 2.4098-.4488 3.2711-.4139.8615.035 1.7232.07 3.2734-.4142 1.2722-.3974 2.4293-1.17776 3.0743-1.66713.2862-.21723.7089-.15379.8993.15103l4.5967 7.3608c.143.229.1072.525-.1017.696-.4965.4061-1.5001 1.122-2.8336 1.5385-1.5487.4837-2.4322.4627-3.3158.4417-.8839-.021-1.768-.042-3.3182.4422-1.3142.4105-1.868.9475-2.0695 1.2038-.0485.0616-.0703.2104-.0324.279.3995.7242 2.2948 4.0598 3.7934 6.6936.1472.2588.4018.4378.695.4895l3.0704.5414c2.8224.4977 5.514-1.3869 6.0116-4.2094l2.5407-14.4089c.4977-2.82243-1.3869-5.51395-4.2094-6.01163L10.632 2.07971Z"
                      fill="url(#a)"
                    />
                    <path
                      d="M16.6465 13.0743c-1.3034.3401-2.0932.3153-2.8829.2906-.7894-.0248-1.5787-.0496-2.8808.2902-.7439.2156-1.1778.592-1.58721 1.072-.05524.0648-.06157.1578-.01723.2305l2.48154 4.0684c.0644.1056.209.1297.3076.055.3732-.2826 1.2802-.9008 2.4193-1.198 1.4688-.3833 2.348-.3747 3.2737-.3657.7169.0069 1.4619.0142 2.5302-.1601.7166-.1169 1.3017-.4284 1.6278-.6356.1658-.1054.2014-.3225.0948-.4875L19.4717 12.3c-.1188-.184-.3687-.2355-.5593-.1276-.4181.2366-1.2035.6248-2.2659.9019Z"
                      fill="url(#b)"
                    />
                    <defs>
                      <lineargradient
                        gradientUnits="userSpaceOnUse"
                        id="a"
                        x1="6.83717"
                        x2="23.7805"
                        y1="2"
                        y2="28.2273"
                      >
                        <stop
                          stop-color="#FFC100"
                        />
                        <stop
                          offset="1"
                          stop-color="#E66B35"
                        />
                      </lineargradient>
                      <lineargradient
                        gradientUnits="userSpaceOnUse"
                        id="b"
                        x1="6.83717"
                        x2="23.7805"
                        y1="2"
                        y2="28.2273"
                      >
                        <stop
                          stop-color="#FFC100"
                        />
                        <stop
                          offset="1"
                          stop-color="#E66B35"
                        />
                      </lineargradient>
                    </defs>
                  </svg>
                </span>
                <p
                  class="StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--font-size-small"
                >
                  dummy
                </p>
              </a>
              <span
                class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey500 StyledProps--padding-right-xsmall StyledProps--padding-left-xsmall"
                data-icon="main-chevron-right"
              >
                <svg
                  enable-background="new 0 0 8 14"
                  height="8"
                  viewBox="0 0 8 14"
                  width="8"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m7.7 6.3-6-6c-.2-.2-.4-.3-.7-.3-.6 0-1 .4-1 1 0 .3.1.5.3.7l5.3 5.3-5.3 5.3c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3l6-6c.2-.2.3-.4.3-.7s-.1-.5-.3-.7z"
                    fill="#4d5969"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
        <h2
          class="StyledProps--font StyledProps--font-h2 StyledProps--main StyledProps--color StyledProps--color-grey800 StyledProps--font-weight-bold"
          level="2"
        >
          cf.shared.targetManagement: cf.shared.segments
        </h2>
      </div>
      <ul
        class="wrapper"
        data-testid="CFSectionToggle"
      >
        <li
          class="item"
        >
          <a
            class="link"
            href="/account/dummy/cf/orgs/dummy/projects/dummy/target-management/targets?activeEnvironment=undefined"
          >
            <span
              class="align"
              data-tooltip-id="ff_targets_heading"
            >
              cf.shared.targets
            </span>
          </a>
        </li>
        <li
          class="item"
        >
          <a
            class="link"
            href="/account/dummy/cf/orgs/dummy/projects/dummy/target-management/target-groups?activeEnvironment=undefined"
          >
            <span
              class="align"
              data-tooltip-id="ff_segments_heading"
            >
              cf.shared.segments
            </span>
          </a>
        </li>
      </ul>
      <div
        data-testid="CFTargetManagementHeaderSpacer"
        style="width: 325px;"
      />
    </div>
    <div
      class="content"
    >
      <div
        class="StyledProps--font StyledProps--main StyledProps--flex StyledProps--flex-align-center-center"
        style="height: 100%;"
      >
        <div
          class="StyledProps--font StyledProps--main StyledProps--flex"
          style="flex-direction: column;"
        >
          <img
            height="220"
            src="test-file-stub"
            width="220"
          />
          <h2
            class="StyledProps--font StyledProps--font-h2 StyledProps--main"
            level="2"
            style="padding-top: 50px; font-weight: 600; font-size: 20px; line-height: 28px; color: rgb(34, 34, 42);"
          >
            cf.noEnvironment.title
          </h2>
          <p
            class="StyledProps--font StyledProps--main"
            style="line-height: 18px; color: rgb(34, 34, 42); text-align: center; width: 400px;"
          >
            cf.noEnvironment.message
          </p>
          <button
            class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--padding-top-small StyledProps--padding-bottom-small StyledProps--padding-left-huge StyledProps--padding-right-huge Button--with-current-color"
            type="button"
          >
            <span
              class="bp3-button-text"
            >
              cf.environments.create.title
            </span>
          </button>
        </div>
      </div>
    </div>
  </main>
</div>
`;

exports[`SegmentsPage SegmentsPage should render data correctly 1`] = `
<div>
  <main
    class="layout"
  >
    <div
      class="Layout--horizontal StyledProps--main PageHeader--container PageHeader--standard header StyledProps--flex StyledProps--padding-left-xlarge StyledProps--padding-right-xlarge StyledProps--background-white"
    >
      <div
        class="Layout--vertical StyledProps--main"
      >
        <div
          class="PageHeader--breadcrumbsDiv"
        >
          <div
            class="Layout--horizontal StyledProps--main Breadcrumbs--breadcrumbs StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
          >
            <div
              class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
            >
              <a
                class="Breadcrumbs--breadcrumb"
                href="/account/dummy/cf/orgs/dummy/projects/dummy"
              >
                <span
                  class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall"
                  data-icon="cf-main"
                >
                  <svg
                    height="16"
                    viewBox="0 0 32 32"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M10.632 2.07971c-2.82243-.49768-5.51395 1.38693-6.01163 4.20941L2.07971 20.698c-.49768 2.8224 1.38693 5.514 4.20941 6.0116l7.46438 1.3162c.1679.0296.2935-.151.2072-.2981L6.88248 15.6562c-.29658-.4692-.29241-1.3825.05036-1.6001.07852-.0505.31177-.259.31177-.259l.39862-.4359.06546-.0718c.36979-.4065.70389-.7738 1.75973-1.3023l.22718-.0791c1.5487-.4838 2.4098-.4488 3.2711-.4139.8615.035 1.7232.07 3.2734-.4142 1.2722-.3974 2.4293-1.17776 3.0743-1.66713.2862-.21723.7089-.15379.8993.15103l4.5967 7.3608c.143.229.1072.525-.1017.696-.4965.4061-1.5001 1.122-2.8336 1.5385-1.5487.4837-2.4322.4627-3.3158.4417-.8839-.021-1.768-.042-3.3182.4422-1.3142.4105-1.868.9475-2.0695 1.2038-.0485.0616-.0703.2104-.0324.279.3995.7242 2.2948 4.0598 3.7934 6.6936.1472.2588.4018.4378.695.4895l3.0704.5414c2.8224.4977 5.514-1.3869 6.0116-4.2094l2.5407-14.4089c.4977-2.82243-1.3869-5.51395-4.2094-6.01163L10.632 2.07971Z"
                      fill="url(#a)"
                    />
                    <path
                      d="M16.6465 13.0743c-1.3034.3401-2.0932.3153-2.8829.2906-.7894-.0248-1.5787-.0496-2.8808.2902-.7439.2156-1.1778.592-1.58721 1.072-.05524.0648-.06157.1578-.01723.2305l2.48154 4.0684c.0644.1056.209.1297.3076.055.3732-.2826 1.2802-.9008 2.4193-1.198 1.4688-.3833 2.348-.3747 3.2737-.3657.7169.0069 1.4619.0142 2.5302-.1601.7166-.1169 1.3017-.4284 1.6278-.6356.1658-.1054.2014-.3225.0948-.4875L19.4717 12.3c-.1188-.184-.3687-.2355-.5593-.1276-.4181.2366-1.2035.6248-2.2659.9019Z"
                      fill="url(#b)"
                    />
                    <defs>
                      <lineargradient
                        gradientUnits="userSpaceOnUse"
                        id="a"
                        x1="6.83717"
                        x2="23.7805"
                        y1="2"
                        y2="28.2273"
                      >
                        <stop
                          stop-color="#FFC100"
                        />
                        <stop
                          offset="1"
                          stop-color="#E66B35"
                        />
                      </lineargradient>
                      <lineargradient
                        gradientUnits="userSpaceOnUse"
                        id="b"
                        x1="6.83717"
                        x2="23.7805"
                        y1="2"
                        y2="28.2273"
                      >
                        <stop
                          stop-color="#FFC100"
                        />
                        <stop
                          offset="1"
                          stop-color="#E66B35"
                        />
                      </lineargradient>
                    </defs>
                  </svg>
                </span>
                <p
                  class="StyledProps--font StyledProps--main StyledProps--intent-primary StyledProps--font-size-small"
                >
                  dummy
                </p>
              </a>
              <span
                class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey500 StyledProps--padding-right-xsmall StyledProps--padding-left-xsmall"
                data-icon="main-chevron-right"
              >
                <svg
                  enable-background="new 0 0 8 14"
                  height="8"
                  viewBox="0 0 8 14"
                  width="8"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m7.7 6.3-6-6c-.2-.2-.4-.3-.7-.3-.6 0-1 .4-1 1 0 .3.1.5.3.7l5.3 5.3-5.3 5.3c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3l6-6c.2-.2.3-.4.3-.7s-.1-.5-.3-.7z"
                    fill="#4d5969"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
        <h2
          class="StyledProps--font StyledProps--font-h2 StyledProps--main StyledProps--color StyledProps--color-grey800 StyledProps--font-weight-bold"
          level="2"
        >
          cf.shared.targetManagement: cf.shared.segments
        </h2>
      </div>
      <ul
        class="wrapper"
        data-testid="CFSectionToggle"
      >
        <li
          class="item"
        >
          <a
            class="link"
            href="/account/dummy/cf/orgs/dummy/projects/dummy/target-management/targets?activeEnvironment=undefined"
          >
            <span
              class="align"
              data-tooltip-id="ff_targets_heading"
            >
              cf.shared.targets
            </span>
          </a>
        </li>
        <li
          class="item"
        >
          <a
            class="link"
            href="/account/dummy/cf/orgs/dummy/projects/dummy/target-management/target-groups?activeEnvironment=undefined"
          >
            <span
              class="align"
              data-tooltip-id="ff_segments_heading"
            >
              cf.shared.segments
            </span>
          </a>
        </li>
      </ul>
      <div
        data-testid="CFTargetManagementHeaderSpacer"
        style="width: 325px;"
      />
    </div>
    <div
      class="Layout--horizontal StyledProps--main PageSubHeader--container toolbar StyledProps--flex"
    >
      <div
        class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
      >
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            cf.segments.create
          </span>
        </button>
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-size-small StyledProps--color StyledProps--color-grey400"
          style="align-self: center;"
        >
          cf.segments.pageDescription
        </p>
      </div>
      <div
        class="bp3-input-group ui-search-box ExpandingSearchInput--main   ExpandingSearchInput--alwaysExpanded ExpandingSearchInput--light"
        data-name="findFlag"
      >
        <span
          class="bp3-icon StyledProps--main ExpandingSearchInput--icon StyledProps--color StyledProps--color-grey700"
          data-icon="thinner-search"
        >
          <svg
            fill="none"
            height="14"
            viewBox="0 0 16 16"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.125 13.25c1.617 0 3.32-.695 4.375-1.75L15 15l-3.5-3.5c1.021-1.005 1.75-2.894 1.75-4.375a6.125 6.125 0 10-6.125 6.125z"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
        </span>
        <input
          class="bp3-input  ExpandingSearchInput--filter"
          dir="auto"
          placeholder="search"
          style="padding-right: 38px;"
          type="search"
          value=""
        />
      </div>
    </div>
    <div
      class="content"
    >
      <div
        class="StyledProps--font StyledProps--main StyledProps--padding-top-medium StyledProps--padding-right-xlarge StyledProps--padding-left-xlarge"
      >
        <div
          class="TableV2--table"
        >
          <div
            class="TableV2--header"
            role="row"
          >
            <div
              class="TableV2--cell"
              colspan="1"
              role="columnheader"
              style="width: 35%;"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
              >
                CF.SHARED.SEGMENT
              </p>
            </div>
            <div
              class="TableV2--cell"
              colspan="1"
              role="columnheader"
              style="width: 35%;"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
              >
                IDENTIFIER
              </p>
            </div>
            <div
              class="TableV2--cell"
              colspan="1"
              role="columnheader"
              style="width: 30%;"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
              >
                CF.TARGETS.CREATEDDATE
              </p>
            </div>
          </div>
          <div
            class="TableV2--body"
          >
            <div
              class="TableV2--row TableV2--card TableV2--clickable"
              role="row"
            >
              <div
                class="TableV2--cell"
                role="cell"
                style="width: 35%;"
              >
                <div
                  class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main"
                  style="align-items: center;"
                >
                  <div
                    class="StyledProps--font StyledProps--main StyledProps--margin-right-small"
                  >
                    <ul
                      class="stack"
                      style="--size: 30px; --itemContainerSize: 30px;"
                    >
                      <li
                        class="itemContainer"
                        style="--color: var(--white); --background: #BDA5F2;"
                      >
                        <p
                          class="StyledProps--font StyledProps--main"
                        >
                          SE
                        </p>
                      </li>
                    </ul>
                  </div>
                  <div
                    class="StyledProps--font StyledProps--main"
                  >
                    <p
                      class="StyledProps--font StyledProps--main"
                      style="font-weight: 600; line-height: 24px; color: rgb(34, 34, 42);"
                    >
                      segment1
                    </p>
                  </div>
                </div>
              </div>
              <div
                class="TableV2--cell"
                role="cell"
                style="width: 35%;"
              >
                <p
                  class="StyledProps--font StyledProps--main"
                >
                  segment1
                </p>
              </div>
              <div
                class="TableV2--cell"
                role="cell"
                style="width: 30%;"
              >
                <div
                  class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-distribution-space-between StyledProps--flex-align-center-center"
                >
                  <p
                    class="StyledProps--font StyledProps--main"
                  >
                    dummy date
                  </p>
                  <div
                    class="StyledProps--font StyledProps--main"
                    style="text-align: right;"
                  >
                    <span
                      class="bp3-popover-wrapper"
                    >
                      <span
                        class="bp3-popover-target"
                      >
                        <button
                          class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
                          type="button"
                        >
                          <span
                            class="bp3-icon StyledProps--main"
                            data-icon="Options"
                          >
                            <svg
                              fill="none"
                              height="16"
                              viewBox="0 0 4 16"
                              width="16"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M2 12.5a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zm2-12a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zM2 7a1 1 0 100 2 1 1 0 000-2zM0 8a2 2 0 114 0 2 2 0 01-4 0z"
                                fill="currentColor"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </button>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <footer
      class="footer"
    />
  </main>
</div>
`;
